Fix gray bleed into panels

--- a/src/sdca.css
+++ b/src/sdca.css
@@ -44,7 +44,7 @@ body .mapboxgl-map {line-height: 1.4;}
 #styleswitcher {font-size: 20px; font-family: Helvetica, Arial, sans-serif; padding: 0 15px 0 0; border:  2px solid #0b0c0c;}
 #styleswitcher ul li input {transform: scale(2); margin: 0 15px 5px 10px;}
 
-#sdca-panel-container {min-height: 700px; height: calc(100vh - 260px); overflow-y: scroll;}
+#sdca-panel-container {min-height: 700px; height: calc(100vh - 260px); overflow-y: scroll; background-color: white;}
 
 /* Panels initial state */
 #data-layers.sdca-panel {display: none;}
